# fastCalc

./: .gitignore  meson.build
benchmarks/: parse.cpp
include/fast_calc/: fcalc.hpp  fcalc_fmt.hpp  re.hpp  smol_str.hpp  wordTypeX
include/test/: calc.hpp
src/: calc.cpp  fcalc.cpp  main.cpp  re.cpp
tests/: calc.cpp  fcalc.cpp  parse_bench.cpp  regex.cpp
